test/classes/initializers/phase1/dynamicThis/castThis.good
castThis.chpl:17: In initializer:
castThis.chpl:20: error: cannot cast "this" before this.complete()
